--- a/sections/problem.tex
+++ b/sections/problem.tex
@@ -1,13 +1,13 @@
 \chapter{Problem Definition}
 \label{problem}
 
-The primary objective of this project is to implement a \textit{multi-purpose recommender framework} to overcome specific issues of recommender systems explained further in this section. The focus on \emph{framework} intends to emphasise an ecosystem which provides a distinctive tool kit to build multiple recommender systems, yet guarantees a simple integration. Insofar the focus of the project will be in the design of an alternative -- perhaps novel -- architecture rather than in the details of techniques and algorithms.
-
-This section discusses the requirements of the project. The requirements \emph{interoperability}, \emph{abstraction} and \emph{ease of integration} will become measures on how successful the project is in overcoming those issues.
+This section outlines key problems the project will address. Then, aims and objectives are defined and explained.
 
 
 
 \section{Project Requirements}
+
+The project requirements are based on identified challenges of recommender systems. The requirements \emph{interoperability}, \emph{abstraction} and \emph{ease of integration} will become measures on how successful the project is in overcoming those issues.
 
 \subsection{Multi-Purpose \& Interoperability}
 \label{problem-multipurpose}
@@ -73,3 +73,15 @@ This requirement suggests to separate a software or architecture into smaller co
 \subsection{Ease of Integration}
 
 The complexity and cost of integration of recommender systems into existing applications is a major constraint for many projects. Ease of integration is therefore a key requirement for this project.
+
+
+
+\section{Aims \& Objectives}
+
+This project aims to develop and evaluate an ecosystem for various recommenders which hides the complexity from external applications and ultimately makes it easy to integrate.
+
+The primary objective is to design an architecture which fulfills the aforementioned requirements of interoperability, abstraction and ease of integration. The objective is to reduce types of communication between integrating application and recommender systems to an elementary minimum. This hides the complexity of the system.
+
+Another main objective is to build a mechanism which allows the integration of various recommender techniques to coexist and cooperate.
+
+Finally, the practicability and suitability of the design is critically evaluated.
