REMOVED STUFF TO MIGRATE TO REPORT

--- a/meta/title.tex
+++ b/meta/title.tex
@@ -16,7 +16,7 @@ Supervised by \supervisor\\
 
 \vspace{0.5in}
 
-A Project Proposal Submitted to\\
+A Project Report Submitted to\\
 Birkbeck College, University of London\\
 in Partial Fulfillment of the Requirements\\
 for the Degree of MSc Business Technologies
