--- a/index.tex
+++ b/index.tex
@@ -3,7 +3,7 @@
 % meta
 \title{A Multi-Purpose Recommender Framework}
 \author{Halil I. K{\"o}kl{\"u}}
-\date{September 2014}
+\date{September 2015}
 \def\supervisor{Nigel Martin}
 % document
 \begin{document}
@@ -13,10 +13,20 @@
 \clearpage
 \setcounter{page}{1}
 
+\input{./meta/declaration.tex}
+\input{./sections/abstract.tex}
+\input{./sections/acknowledgements.tex}
+
 \input{./meta/toc.tex}
 
-% sections
+\input{./sections/teaser.tex}
+\input{./sections/architecture.tex}
+\input{./sections/implementation.tex}
+\input{./sections/evaluation.tex}
+\input{./sections/conclusion.tex}
 
 \input{./meta/bibl.tex}
+
+\input{./sections/appendices.tex}
 
 \end{document}
