restructuring of outlines

--- a/index.tex
+++ b/index.tex
@@ -20,8 +20,10 @@
 \input{./meta/toc.tex}
 
 \input{./sections/teaser.tex}
+\input{./sections/introduction.tex}
 \input{./sections/architecture.tex}
 \input{./sections/implementation.tex}
+\input{./sections/testing.tex}
 \input{./sections/evaluation.tex}
 \input{./sections/conclusion.tex}
 
