--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,3 +1,11 @@
-\chapter{Conclusion}
+\chapter{Conclusion \& Future Work}
+
+\emph{Status: Not Started}
+
+\begin{itemize}
+\item Emphasis of other recommendation efforts
+\item This work with reference to its weaknesses from evaluation is still an fair approach?
+\item Usage in a high-traffic environment
+\end{itemize}
 
 To get references to show up, here is a dummy reference \citet{anand03}.
