--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -1,1 +1,71 @@
-\chapter{Evaluation}
+\chapter{Evaluating Achievement of Objectives}
+
+\emph{Status: Not Started}
+
+\section{Multi-Purpose \& Interoperability}
+
+\emph{Status: Not Started}
+
+\subsection{Interoperibility of the recommendation queries}
+
+\emph{Status: Not Started}
+
+\subsection{Interoperibility of the user and domain models}
+
+\emph{Status: Not Started}
+
+\subsection{Interoperibility of the recommendation results}
+
+\emph{Status: Not Started}
+
+\section{Abstraction}
+
+\emph{Status: Not Started}
+
+\subsection{Complexity}
+
+\emph{Status: Not Started}
+
+\subsection{Database Abstraction}
+
+\emph{Status: Not Started}
+
+\subsection{Reusability}
+
+\emph{Status: Not Started}
+
+\subsection{Dependancy}
+
+\emph{Status: Not Started}
+
+\subsection{Encapsulation}
+
+\emph{Status: Not Started}
+
+\section{Ease of integration}
+
+\emph{Status: Not Started}
+
+\subsection{Integrating Applications}
+
+\emph{Status: Not Started}
+
+\subsection{Framework}
+
+\emph{Status: Not Started}
+
+\subsection{Recommender Engines}
+
+\emph{Status: Not Started}
+
+\section{Recommender Ecosystem}
+
+\emph{Status: Not Started}
+
+\subsection{Coexistence}
+
+\emph{Status: Not Started}
+
+\subsection{Cooperation}
+
+\emph{Status: Not Started}
