--- a/sections/teaser.tex
+++ b/sections/teaser.tex
@@ -1,1 +1,9 @@
 \chapter{Teaser}
+
+\emph{Status: Not Started}
+
+\begin{itemize}
+\item Screenshot of recommender on homepage
+\item Screenshot of recommender on basket
+\item Full Architecture Diagram
+\end{itemize}
