--- a/sections/appendices.tex
+++ b/sections/appendices.tex
@@ -6,11 +6,19 @@
 
 \subsection{Installation \& Provisioning}
 
+\emph{Status: Not Started}
+
 \subsubsection{Install Source Code}
+
+\emph{Status: Not Started}
 
 \subsubsection{Install Virtual Machine}
 
+\emph{Status: Not Started}
+
 \subsubsection{Useful Commands}
+
+\emph{Status: Not Started}
 
 \subsection{Framework}
 
@@ -137,19 +145,25 @@
 
 \emph{Status: Not Started}
 
-\subsubsection{Connect to DB}
-
-\emph{Status: Not Started}
-
 
 \section{Source Code}
 
 \subsection{Framework}
 
+% \input{./listings/source/framework.tex}
+
 \subsection{Recommendation Engine: In-Common}
+
+% \input{./listings/source/inCommon.tex}
 
 \subsection{Recommendation Engine: Item-Similarity}
 
+% \input{./listings/source/itemSimilarity.tex}
+
 \subsection{Demo Application: Magento}
 
+% \input{./listings/source/magento.tex}
+
 \subsection{Provisioning}
+
+% \input{./listings/source/provision.tex}
