--- a/sections/testing.tex
+++ b/sections/testing.tex
@@ -64,6 +64,24 @@
 
 \emph{Status: Not Started}
 
+\subsection{Recommendation Use Cases}
+
+\emph{Status: Not Started}
+
+\begin{itemize}
+\item Open two browsers
+\item Login with both into two accounts
+\item View the same product with both
+\item View different products with both
+\item See homepage
+\item Add the same product to wishlist with both
+\item Add different products to wishlist with both
+\item See Account > My Wishlist
+\item See Account for hybrid
+\item Add items to basket with any browser
+\item See similar items
+\end{itemize}
+
 \subsection{Benchmarks}
 
 \emph{Status: Not Started}
